--- a/adm.html
+++ b/adm.html
@@ -15,7 +15,7 @@
   --amarelo:#ffc107;
   --roxo:#6f42c1;
   --cinza:#f1f1f1;
-  --bg:#fff;
+  --bg:#ffffff;
   --ink:#222;
 }
 body.dark{
@@ -31,7 +31,7 @@ body{
   color:var(--ink);
 }
 
-/* HEADER */
+/* ===== HEADER ===== */
 header{
   position:sticky;
   top:0;
@@ -43,9 +43,18 @@ header{
   justify-content:space-between;
   align-items:center;
 }
-header h1{margin:0;font-size:1.2em}
+header h1{
+  margin:0;
+  font-size:1.2em;
+}
+header button{
+  border:none;
+  background:none;
+  font-size:18px;
+  cursor:pointer;
+}
 
-/* RESUMO */
+/* ===== RESUMO ===== */
 .resumo{
   display:flex;
   flex-wrap:wrap;
@@ -59,18 +68,25 @@ header h1{margin:0;font-size:1.2em}
   font-weight:bold;
   font-size:13px;
   display:flex;
+  align-items:center;
   gap:6px;
 }
 .card span{
-  background:rgba(255,255,255,.7);
+  background:rgba(255,255,255,.75);
   padding:2px 8px;
   border-radius:6px;
 }
+.card.pendente{background:#f9f9f9}
+.card.carrinho{background:#d1ecf1}
+.card.comprado{background:#fff3cd}
+.card.negado{background:#f8d7da}
+.card.entregue{background:#d4edda}
+.card.semestoque{background:#ede7f6}
 
-/* FILTROS */
+/* ===== FILTROS ===== */
 .filtros{
   position:sticky;
-  top:60px;
+  top:64px;
   z-index:20;
   background:var(--bg);
   padding:10px;
@@ -78,14 +94,15 @@ header h1{margin:0;font-size:1.2em}
   flex-wrap:wrap;
   gap:8px;
 }
-.filtros input,.filtros select{
+.filtros input,
+.filtros select{
   padding:6px;
   border-radius:6px;
   border:1px solid #ccc;
   font-size:13px;
 }
 
-/* TABELA */
+/* ===== TABELA ===== */
 table{
   width:100%;
   border-collapse:collapse;
@@ -96,23 +113,31 @@ thead{
   background:var(--azul);
   color:#fff;
   position:sticky;
-  top:120px;
+  top:128px;
+  z-index:10;
 }
 th,td{
   padding:8px;
   border:1px solid #ddd;
   text-align:center;
+  vertical-align:middle;
 }
 td[colspan]{
   background:#e3eaf3;
   font-weight:bold;
   text-align:left;
 }
-
-/* STATUS */
 select.status{
   padding:4px;
   border-radius:5px;
+}
+
+/* ===== RESPONSIVO ===== */
+@media(max-width:900px){
+  th:nth-child(7),
+  td:nth-child(7){
+    display:none;
+  }
 }
 </style>
 </head>
@@ -121,22 +146,24 @@ select.status{
 
 <header>
   <h1>📋 Requisições Mercatto</h1>
-  <button onclick="toggleTema()">🌙</button>
+  <button onclick="toggleTema()" id="temaBtn">🌙</button>
 </header>
 
+<!-- ===== RESUMO ===== -->
 <div class="resumo">
-  <div class="card" style="background:#f9f9f9">🕓 PENDENTE <span id="cP">0</span></div>
-  <div class="card" style="background:#d1ecf1">🛒 CARRINHO <span id="cC">0</span></div>
-  <div class="card" style="background:#fff3cd">💰 COMPRADO <span id="cCO">0</span></div>
-  <div class="card" style="background:#f8d7da">❌ NEGADO <span id="cN">0</span></div>
-  <div class="card" style="background:#d4edda">✅ ENTREGUE <span id="cE">0</span></div>
-  <div class="card" style="background:#ede7f6">🚫 SEM ESTOQUE <span id="cSE">0</span></div>
+  <div class="card pendente">🕓 PENDENTE <span id="cP">0</span></div>
+  <div class="card carrinho">🛒 NO CARRINHO <span id="cC">0</span></div>
+  <div class="card comprado">💰 COMPRADO <span id="cCO">0</span></div>
+  <div class="card negado">❌ NEGADO <span id="cN">0</span></div>
+  <div class="card entregue">✅ ENTREGUE <span id="cE">0</span></div>
+  <div class="card semestoque">🚫 SEM ESTOQUE <span id="cSE">0</span></div>
 </div>
 
+<!-- ===== FILTROS ===== -->
 <div class="filtros">
   <input type="date" id="dataInicio">
   <input type="date" id="dataFim">
-  <input type="text" id="fItem" placeholder="Item / Obs">
+  <input type="text" id="fItem" placeholder="Item ou Observação">
   <select id="fStatus">
     <option value="PENDENTE" selected>PENDENTE</option>
     <option value="TODOS">TODOS</option>
@@ -149,16 +176,23 @@ select.status{
   <select id="fSetor"></select>
   <select id="fUsuario"></select>
   <select id="fModo">
-    <option value="setor">Exibir por Setor</option>
-    <option value="usuario">Exibir por Solicitante</option>
+    <option value="setor">Agrupar por Setor</option>
+    <option value="usuario">Agrupar por Solicitante</option>
   </select>
 </div>
 
+<!-- ===== TABELA ===== -->
 <table>
 <thead>
 <tr>
-  <th>Data</th><th>Item</th><th>Qtd</th><th>Un</th>
-  <th>Setor</th><th>Solicitante</th><th>Obs</th><th>Status</th>
+  <th>Data/Hora</th>
+  <th>Produto</th>
+  <th>Qtd</th>
+  <th>Un</th>
+  <th>Setor</th>
+  <th>Solicitante</th>
+  <th>Obs</th>
+  <th>Status</th>
 </tr>
 </thead>
 <tbody id="tabela"></tbody>
@@ -166,455 +200,140 @@ select.status{
 
 <script>
 /* ===== SUPABASE ===== */
-const sb=supabase.createClient(
- "https://mybsriouiwqsdufujbsc.supabase.co",
- "sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN"
+const sb = supabase.createClient(
+  "https://mybsriouiwqsdufujbsc.supabase.co",
+  "sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN"
 );
 
 let dados=[];
 
-/* TEMA */
+/* ===== TEMA ===== */
 function toggleTema(){
- document.body.classList.toggle("dark");
- localStorage.setItem("tema",document.body.classList.contains("dark")?"dark":"light");
+  document.body.classList.toggle("dark");
+  localStorage.setItem("tema",document.body.classList.contains("dark")?"dark":"light");
+  temaBtn.textContent=document.body.classList.contains("dark")?"☀️":"🌙";
 }
-if(localStorage.getItem("tema")==="dark") document.body.classList.add("dark");
+if(localStorage.getItem("tema")==="dark"){
+  document.body.classList.add("dark");
+  temaBtn.textContent="☀️";
+}
 
-/* LOAD */
+/* ===== LOAD ===== */
 async function carregar(){
- const {data,error}=await sb.from("requisicoes")
-  .select("*")
-  .order("created_at",{ascending:false});
- if(error){alert(error.message);return;}
- dados=data||[];
- preencherFiltros();
- filtrar();
+  const {data,error}=await sb
+    .from("requisicoes")
+    .select("*")
+    .order("created_at",{ascending:false});
+
+  if(error){
+    alert("Erro Supabase: "+error.message);
+    return;
+  }
+
+  dados=data||[];
+  preencherFiltros();
+  filtrar();
 }
 
-/* FILTROS */
+/* ===== FILTROS ===== */
 function preencherFiltros(){
- fSetor.innerHTML='<option value="">Todos Setores</option>';
- [...new Set(dados.map(d=>d.setor).filter(Boolean))]
-  .forEach(s=>fSetor.innerHTML+=`<option>${s}</option>`);
+  fSetor.innerHTML='<option value="">Todos Setores</option>';
+  [...new Set(dados.map(d=>d.setor).filter(Boolean))]
+    .forEach(s=>fSetor.innerHTML+=`<option>${s}</option>`);
 
- fUsuario.innerHTML='<option value="">Todos Solicitantes</option>';
- [...new Set(dados.map(d=>d.usuario).filter(Boolean))]
-  .forEach(u=>fUsuario.innerHTML+=`<option>${u}</option>`);
+  fUsuario.innerHTML='<option value="">Todos Solicitantes</option>';
+  [...new Set(dados.map(d=>d.usuario).filter(Boolean))]
+    .forEach(u=>fUsuario.innerHTML+=`<option>${u}</option>`);
 }
+
 [dataInicio,dataFim,fItem,fStatus,fSetor,fUsuario,fModo].forEach(e=>e.oninput=filtrar);
 
-/* FILTRAR */
+/* ===== FILTRAR ===== */
 function filtrar(){
- let lista=[...dados];
- const fs=fStatus.value;
- if(fs!=="TODOS"){
-  lista=lista.filter(r=>{
-   const s=(r.status||"PENDENTE").toUpperCase();
-   return fs==="PENDENTE"
-    ? !["NO CARRINHO","COMPRADO","NEGADO","ENTREGUE","SEM ESTOQUE"].includes(s)
-    : s===fs;
-  });
- }
- if(fSetor.value) lista=lista.filter(r=>r.setor===fSetor.value);
- if(fUsuario.value) lista=lista.filter(r=>r.usuario===fUsuario.value);
- if(fItem.value){
-  const t=fItem.value.toLowerCase();
-  lista=lista.filter(r=>r.produto.toLowerCase().includes(t)||(r.observacoes||"").toLowerCase().includes(t));
- }
- render(lista);
+  let lista=[...dados];
+
+  const fs=fStatus.value;
+  if(fs!=="TODOS"){
+    lista=lista.filter(r=>{
+      const s=(r.status||"PENDENTE").toUpperCase();
+      const pendente=!["NO CARRINHO","COMPRADO","NEGADO","ENTREGUE","SEM ESTOQUE"].includes(s);
+      return fs==="PENDENTE"?pendente:s===fs;
+    });
+  }
+
+  if(fSetor.value) lista=lista.filter(r=>r.setor===fSetor.value);
+  if(fUsuario.value) lista=lista.filter(r=>r.usuario===fUsuario.value);
+
+  if(fItem.value){
+    const t=fItem.value.toLowerCase();
+    lista=lista.filter(r=>
+      r.produto.toLowerCase().includes(t) ||
+      (r.observacoes||"").toLowerCase().includes(t)
+    );
+  }
+
+  render(lista);
 }
 
-/* RENDER */
+/* ===== RENDER ===== */
 function render(lista){
- const t=tabela; t.innerHTML="";
- const c={PENDENTE:0,"NO CARRINHO":0,COMPRADO:0,NEGADO:0,ENTREGUE:0,"SEM ESTOQUE":0};
+  tabela.innerHTML="";
+  const cont={PENDENTE:0,"NO CARRINHO":0,COMPRADO:0,NEGADO:0,ENTREGUE:0,"SEM ESTOQUE":0};
 
- const grupos={};
- lista.forEach(r=>{
-  const k=fModo.value==="setor"?r.setor:r.usuario;
-  if(!grupos[k]) grupos[k]=[];
-  grupos[k].push(r);
-  c[(r.status||"PENDENTE").toUpperCase()]++;
- });
-
- for(const g in grupos){
-  t.insertAdjacentHTML("beforeend",`<tr><td colspan="8">${fModo.value==="setor"?"Setor":"Solicitante"}: ${g}</td></tr>`);
-  grupos[g].forEach(r=>{
-   t.insertAdjacentHTML("beforeend",`
-    <tr>
-     <td>${new Date(r.created_at).toLocaleString()}</td>
-     <td>${r.produto}</td>
-     <td>${r.quantidade}</td>
-     <td>${r.unidade}</td>
-     <td>${r.setor}</td>
-     <td>${r.usuario}</td>
-     <td>${r.observacoes||""}</td>
-     <td>
-      <select class="status" onchange="mudarStatus('${r.id}',this.value)">
-       ${Object.keys(c).map(s=>`<option ${r.status===s?"selected":""}>${s}</option>`).join("")}
-      </select>
-     </td>
-    </tr>`);
+  const grupos={};
+  lista.forEach(r=>{
+    const chave=fModo.value==="setor"?r.setor:r.usuario;
+    if(!grupos[chave]) grupos[chave]=[];
+    grupos[chave].push(r);
+    cont[(r.status||"PENDENTE").toUpperCase()]++;
   });
- }
 
- cP.textContent=c.PENDENTE||0;
- cC.textContent=c["NO CARRINHO"]||0;
- cCO.textContent=c.COMPRADO||0;
- cN.textContent=c.NEGADO||0;
- cE.textContent=c.ENTREGUE||0;
- cSE.textContent=c["SEM ESTOQUE"]||0;
+  for(const g in grupos){
+    tabela.insertAdjacentHTML("beforeend",
+      `<tr><td colspan="8">${fModo.value==="setor"?"Setor":"Solicitante"}: ${g}</td></tr>`
+    );
+
+    grupos[g].forEach(r=>{
+      tabela.insertAdjacentHTML("beforeend",`
+        <tr>
+          <td>${new Date(r.created_at).toLocaleString()}</td>
+          <td>${r.produto}</td>
+          <td>${r.quantidade}</td>
+          <td>${r.unidade}</td>
+          <td>${r.setor}</td>
+          <td>${r.usuario}</td>
+          <td>${r.observacoes||""}</td>
+          <td>
+            <select class="status" onchange="mudarStatus('${r.id}',this.value)">
+              ${Object.keys(cont).map(s=>`<option ${r.status===s?"selected":""}>${s}</option>`).join("")}
+            </select>
+          </td>
+        </tr>
+      `);
+    });
+  }
+
+  cP.textContent=cont.PENDENTE||0;
+  cC.textContent=cont["NO CARRINHO"]||0;
+  cCO.textContent=cont.COMPRADO||0;
+  cN.textContent=cont.NEGADO||0;
+  cE.textContent=cont.ENTREGUE||0;
+  cSE.textContent=cont["SEM ESTOQUE"]||0;
 }
 
-/* STATUS */
+/* ===== STATUS (SUPABASE REAL) ===== */
 async function mudarStatus(id,status){
- const {error}=await sb.from("requisicoes").update({status}).eq("id",id);
- if(error){alert(error.message);return;}
- const r=dados.find(d=>d.id===id);
- r.status=status;
- filtrar();
+  const {error}=await sb.from("requisicoes").update({status}).eq("id",id);
+  if(error){
+    alert("Erro ao atualizar status: "+error.message);
+    return;
+  }
+  const r=dados.find(d=>d.id===id);
+  if(r) r.status=status;
+  filtrar();
 }
 
-carregar();
-</script>
-
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-<meta charset="UTF-8">
-<title>Painel de Requisições • Delícia Gourmet</title>
-
-<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
-
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="https://unpkg.com/@ericblade/quagga2/dist/quagga.min.js"></script>
-
-<style>
-:root{
-  --bg:#f4f6f8;
-  --card:#ffffff;
-  --ink:#0f172a;
-  --primary:#2563eb;
-  --success:#16a34a;
-  --danger:#dc2626;
-  --warn:#f59e0b;
-  --purple:#7c3aed;
-  --gray:#94a3b8;
-}
-*{box-sizing:border-box}
-body{
-  margin:0;
-  font-family:Inter,Arial;
-  background:var(--bg);
-  color:var(--ink);
-}
-
-/* HEADER */
-header{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:14px 20px;
-  background:var(--card);
-  border-bottom:1px solid #e5e7eb;
-  position:sticky;
-  top:0;
-  z-index:30;
-}
-header h1{margin:0;font-size:18px;font-weight:800}
-header button{
-  border:none;
-  background:#fee2e2;
-  color:#991b1b;
-  padding:6px 12px;
-  border-radius:999px;
-  font-size:12px;
-  font-weight:800;
-}
-
-/* RESUMO */
-.resumo{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(140px,1fr));
-  gap:10px;
-  padding:14px;
-}
-.card{
-  padding:14px;
-  border-radius:16px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  font-weight:800;
-  font-size:13px;
-  color:#fff;
-}
-.card span{
-  background:rgba(255,255,255,.25);
-  padding:4px 10px;
-  border-radius:999px;
-}
-.c-pendente{background:var(--primary)}
-.c-carrinho{background:var(--purple)}
-.c-comprado{background:var(--warn);color:#000}
-.c-negado{background:var(--danger)}
-.c-entregue{background:var(--success)}
-.c-se{background:var(--gray)}
-
-/* TABELA */
-table{
-  width:100%;
-  border-collapse:collapse;
-  background:var(--card);
-}
-thead{
-  background:var(--primary);
-  color:#fff;
-}
-th,td{
-  padding:8px;
-  border:1px solid #e5e7eb;
-  font-size:13px;
-  text-align:center;
-}
-
-.editavel{
-  font-weight:800;
-  cursor:pointer;
-  user-select:none;
-}
-
-select.status{
-  padding:6px;
-  border-radius:8px;
-  font-weight:800;
-}
-
-/* MODAL */
-.modal{
-  position:fixed;
-  inset:0;
-  background:rgba(0,0,0,.6);
-  display:none;
-  align-items:center;
-  justify-content:center;
-  z-index:999;
-}
-.modal-box{
-  background:#fff;
-  padding:20px;
-  border-radius:16px;
-  width:90%;
-  max-width:420px;
-}
-.modal-box h3{margin-top:0}
-.modal-box input{
-  width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid #cbd5e1;
-}
-.modal-box button{
-  width:100%;
-  padding:10px;
-  border-radius:10px;
-  border:none;
-  font-weight:800;
-  margin-top:8px;
-}
-.btn-primary{background:var(--primary);color:#fff}
-.btn-muted{background:#e5e7eb}
-
-#camera{
-  width:100%;
-  height:220px;
-  background:#000;
-  border-radius:12px;
-  display:none;
-  margin-top:10px;
-}
-#codigoLido{
-  text-align:center;
-  font-weight:800;
-  margin-top:6px;
-  color:var(--primary);
-}
-</style>
-</head>
-
-<body>
-
-<header>
-  <h1>📋 Painel de Requisições</h1>
-  <button onclick="logout()">Sair</button>
-</header>
-
-<div class="resumo">
-  <div class="card c-pendente">PENDENTE <span id="cP">0</span></div>
-  <div class="card c-carrinho">NO CARRINHO <span id="cC">0</span></div>
-  <div class="card c-comprado">COMPRADO <span id="cCO">0</span></div>
-  <div class="card c-negado">NEGADO <span id="cN">0</span></div>
-  <div class="card c-entregue">ENTREGUE <span id="cE">0</span></div>
-  <div class="card c-se">SEM ESTOQUE <span id="cSE">0</span></div>
-</div>
-
-<table>
-<thead>
-<tr>
-  <th>Data</th>
-  <th>Produto</th>
-  <th>Qtd</th>
-  <th>Un</th>
-  <th>Status</th>
-</tr>
-</thead>
-<tbody id="lista"></tbody>
-</table>
-
-<!-- MODAL PRODUTO -->
-<div class="modal" id="modalProduto">
-  <div class="modal-box">
-    <h3>Alterar produto</h3>
-    <input id="novoBarcode" placeholder="Digite ou escaneie">
-    <button class="btn-muted" onclick="abrirCamera()">Buscar com câmera</button>
-    <div id="camera"></div>
-    <div id="codigoLido"></div>
-    <button class="btn-primary" onclick="confirmarProduto()">Confirmar</button>
-    <button class="btn-muted" onclick="fecharModal()">Cancelar</button>
-  </div>
-</div>
-
-<audio id="beep">
-<source src="data:audio/wav;base64,UklGRlIAAABXQVZFZm10IBAAAAABAAEAESsAACJWAAACABAAZGF0YQwAAAAA">
-</audio>
-
-<script>
-const sb=supabase.createClient(
- "https://mybsriouiwqsdufujbsc.supabase.co",
- "sb_publishable_AUyBEIVCAMUoXwDKUmlqSw_v8EY8rVN"
-);
-
-const listaEl=document.getElementById("lista");
-let dados=[],editandoId=null;
-
-const normalizar=c=>"0"+String(c).replace(/\D/g,"");
-
-/* LOAD */
-async function carregar(){
- const {data,error}=await sb.from("requisicoes")
- .select("*")
- .order("created_at",{ascending:false});
- if(error){alert(error.message);return;}
- dados=data||[];
- render();
-}
-
-/* RENDER */
-function render(){
- listaEl.innerHTML="";
- const c={PENDENTE:0,"NO CARRINHO":0,COMPRADO:0,NEGADO:0,ENTREGUE:0,"SEM ESTOQUE":0};
- dados.forEach(r=>{
-  c[r.status]++;
-  listaEl.innerHTML+=`
-  <tr>
-    <td>${new Date(r.created_at).toLocaleString()}</td>
-    <td class="editavel" ondblclick="editarProduto('${r.id}')">${r.produto}</td>
-    <td class="editavel" ondblclick="editarQtd('${r.id}')">${r.quantidade}</td>
-    <td>${r.unidade}</td>
-    <td>
-      <select class="status" onchange="mudarStatus('${r.id}',this.value)">
-        ${Object.keys(c).map(s=>`<option ${r.status===s?"selected":""}>${s}</option>`).join("")}
-      </select>
-    </td>
-  </tr>`;
- });
- cP.textContent=c.PENDENTE||0;
- cC.textContent=c["NO CARRINHO"]||0;
- cCO.textContent=c.COMPRADO||0;
- cN.textContent=c.NEGADO||0;
- cE.textContent=c.ENTREGUE||0;
- cSE.textContent=c["SEM ESTOQUE"]||0;
-}
-
-/* STATUS */
-async function mudarStatus(id,status){
- const {error}=await sb.from("requisicoes").update({status}).eq("id",id);
- if(error){alert(error.message);return;}
- const r=dados.find(d=>d.id===id);
- r.status=status;
- render();
-}
-
-/* PRODUTO */
-function editarProduto(id){
- editandoId=id;
- modalProduto.style.display="flex";
-}
-
-function fecharModal(){
- modalProduto.style.display="none";
- camera.style.display="none";
- if(window.Quagga) Quagga.stop();
- codigoLido.textContent="";
- novoBarcode.value="";
-}
-
-function abrirCamera(){
- camera.style.display="block";
- Quagga.init({
-  inputStream:{type:"LiveStream",target:camera,constraints:{facingMode:"environment"}},
-  decoder:{readers:["ean_reader","ean_8_reader","upc_reader","code_128_reader"]}
- },()=>Quagga.start());
-
- Quagga.onDetected(r=>{
-  const code=normalizar(r.codeResult.code);
-  novoBarcode.value=code;
-  codigoLido.textContent=code;
-  confirmarProduto();
- });
-}
-
-async function confirmarProduto(){
- if(!novoBarcode.value) return;
- const r=await fetch(`/api/buscar-barcode?barcode=${novoBarcode.value}`);
- const j=await r.json();
- if(!j?.produto){alert("Produto não encontrado");return;}
-
- const {error}=await sb.from("requisicoes").update({
-  produto:j.produto.descricao,
-  unidade:j.produto.unidadeDeVenda,
-  barcode:novoBarcode.value
- }).eq("id",editandoId);
-
- if(error){alert(error.message);return;}
-
- document.getElementById("beep").play();
- fecharModal();
- carregar();
-}
-
-/* QTD */
-function editarQtd(id){
- const r=dados.find(d=>d.id===id);
- const decimal=/KG|L/i.test(r.unidade);
- const v=prompt("Nova quantidade:",r.quantidade);
- if(v===null)return;
- const n=decimal?parseFloat(v):parseInt(v);
- if(isNaN(n))return;
- sb.from("requisicoes").update({quantidade:n}).eq("id",id);
- r.quantidade=n;
- render();
-}
-
-/* LOGOUT */
-function logout(){
- localStorage.clear();
- location.reload();
-}
-
+/* INIT */
 carregar();
 </script>
 
